CHATS_SIT/force-app/main/default/objects/T_APPLN_EDUC__c.object
<CustomObject>
    <description>PEAK application education information</description>
    <!--enableChangeDataCapture>false</enableChangeDataCapture-->
    <fields>
        <fullName>CDE_TYPE_SCHOOL__c</fullName>
        <description>CDE_TYPE_SCHOOL</description>
        <label>CDE_TYPE_SCHOOL</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_COMPLTN_EXPTD_EDUC__c</fullName>
        <description>DTE_COMPLTN_EXPTD_EDUC</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_COMPLTN_EXPTD_EDUC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_EDUC__c</fullName>
        <label>IDN_APPLN_EDUC</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Education</relationshipLabel>
        <relationshipName>Application_Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NAM_SCHOOL__c</fullName>
        <description>NAM_SCHOOL</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_SCHOOL</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <!--CCCAP-15444-->
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>Address Line 1</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_LINE_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
            <fullName>ADR_LINE_2__c</fullName>
            <description>Address Line 2</description>
            <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
            <label>ADR_LINE_2</label>
            <length>35</length>
            <type>Text</type>
    </fields>
    <fields>
            <fullName>ADR_STATE__c</fullName>
            <description>State of Facility</description>
            <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
            <label>ADR_STATE</label>
            <length>255</length>
            <type>Text</type>
    </fields>
    <fields>
            <fullName>ADR_ZIP_EXTN__c</fullName>
            <description>Zip Ext.</description>
            <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
            <label>ADR_ZIP_EXTN</label>
            <length>4</length>
            <type>Text</type>
    </fields>
    <fields>
            <fullName>ADR_ZIP_MAIN__c</fullName>
            <description>Zip</description>
            <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
            <label>ADR_ZIP_MAIN</label>
            <length>5</length>
            <type>Text</type>
    </fields>
    <fields>
        <fullName>HOURS_SUD__c</fullName>
        <label>HOURS_SUD</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <!--end CCCAP-15444-->
    <fields>
        <fullName>NBR_CREDITS__c</fullName>
        <description>NBR_CREDITS</description>
        <label>NBR_CREDITS</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Education</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AEDUC-{0}</displayFormat>
        <label>Application Education ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Education</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>